--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
 	},
 	"dependencies": {
 		"@astrojs/rss": "4.0.1",
+		"@astrojs/solid-js": "^5.1.3",
+		"@netlify/blobs": "^10.5.0",
+		"@netlify/functions": "^5.1.2",
 		"astro": "4.0.8",
 		"astro-font": "^0.0.72",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"solid-js": "^1.9.10"
 	},
 	"devDependencies": {
 		"@astrojs/mdx": "2.0.3",
